<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MarinaIndustri</string>

    <string name="marina">Marina</string>
    <string name="industri">Industri</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="username">Username</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="daftar_u"><u>Daftar</u></string>
    <string name="daftar">Daftar</string>
    <string name="masuk_u"><u>Masuk</u></string>
    <string name="masuk">Masuk</string>
    <string name="lewati">Lewati</string>

    <string name="registrasi">Registrasi</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_tengah">Nama Tengah (opsional)</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="alamat">Alamat</string>
    <string name="no_telepon">No.Telepon</string>
    <string name="email">E-mail</string>

    <string name="teks" tools:ignore="Typos">Selamat Registrasi\nAkun Anda\nBerhasil!</string>
    <string name="jalan" tools:ignore="Typos">Jl. Diponegoro …</string>
    <string name="beranda" tools:ignore="Typos">Beranda</string>
    <string name="makaroni" tools:ignore="Typos">Makaroni</string>
    <string name="kategori" tools:ignore="Typos">Kategori</string>
    <string name="juli" tools:ignore="Typos">Juli</string>
    <string name="opak" tools:ignore="Typos">Opak</string>
    <string name="emping" tools:ignore="Typos">Emping</string>
    <string name="kacang" tools:ignore="Typos">Kacang</string>
    <string name="cipir" tools:ignore="Typos">Cipir</string>
    <string name="populer" tools:ignore="Typos">Populer</string>
    <string name="lihat_semua" tools:ignore="Typos">Lihat Semua</string>

    <string name="rp_2_500">Rp. 2.500</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur iaculis purus dolor, eget convallis lorem interdum non. Suspendisse fringilla nisl lacinia sapien dignissim tincidunt.</string>
    <string name="beli_sekarang">Beli Sekarang</string>

    <string name="keranjang">Keranjang</string>
    <string name="pilih_semua">Pilih Semua</string>
    <string name="hapus">Hapus</string>
    <string name="kapri_hijau">Kapri Hijau</string>
    <string name="kedelai_bangkok">Kedelai Bangkok</string>
    <string name="kacang_mix">Kacang Mix</string>
    <string name="potato">Potato</string>
    <string name="total_harga">Total Harga</string>
    <string name="bayar">Bayar</string>
    <string name="rp_36_000">Rp. 36.000</string>
    <string name="rp_6_000">Rp. 6.000</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>

    <string name="keranjang_kosong">Keranjang\nKosong</string>
    <string name="beli">Beli</string>

    <string name="checkout">Checkout</string>
    <string name="dikirim_ke_rumah">Dikirim ke : Rumah</string>
    <string name="jl_diponegoro">Jl. Diponegoro</string>
    <string name="edit">edit</string>
    <string name="pilih_nomor_rekening">Pilih nomor rekening</string>
    <string name="copy">copy</string>
    <string name="bri">Bri</string>
    <string name="_23423_32263_35224">23423 32263 35224</string>
    <string name="bca">Bca</string>
    <string name="_56563_32263">56563 32263</string>
    <string name="total">Total</string>
    <string name="bukti_pembayaran">Bukti Pembayaran</string>
    <string name="_empty">…</string>
    <string name="unggah">Unggah</string>
    <string name="kirim">Kirim</string>

    <string name="pemesanan_telah_berhasil_nterima_kasih">Pemesanan Telah Berhasil\nTerima Kasih</string>

    <string name="notifikasi">Notifikasi</string>
    <string name="promo_paket_hemat">Promo Paket Hemat</string>
    <string name="hari_ini">Hari ini</string>
    <string name="_1_minggu_lalu">1 minggu lalu</string>
    <string name="promo_idul_adha">Promo Idul Adha</string>
    <string name="promo_idul_fitri">Promo Idul Fitri</string>
    <string name="_5_minggu_lalu">5 minggu lalu</string>
    <string name="promo_bulan_ramadhan">Promo Bulan Ramadhan</string>
    <string name="_7_minggu_lalu">7 minggu lalu</string>
    <string name="promo_natal_amp_akhir_tahun"><![CDATA[Promo Natal & Akhir Tahun]]></string>

    <string name="lorem1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="cek_sekarang">Cek Sekarang</string>
    <string name="masuk_untuk_melihat_notifikasi">Masuk untuk melihat notifikasi</string>

    <string name="profil">Profil</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="pesanan">Pesanan</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="lainnya">Lainnya</string>
    <string name="bantuan">Bantuan</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="privasi_dan_keamanan">Privasi dan Keamanan</string>
    <string name="keluar">Keluar</string>
    <string name="magdarini">Magdarini</string>
    <string name="u0040magdarini">\@magdarini</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="simpan">simpan</string>

    <string name="lorem2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</string>
    <string name="rp_7_000">Rp. 7.000</string>
    <string name="rp_43_000">Rp. 43.000</string>
</resources>