<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maroon"
    tools:context=".DaftarActivity">

    <TextView
        android:id="@+id/registrasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrasi"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/lazydog"
        app:layout_constraintVertical_bias=".02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".92"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="none"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labNamadepan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_depan"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular" />

            <EditText
                android:id="@+id/Namadepan"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:inputType="text"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labNamatengah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nama_tengah"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular" />

            <EditText
                android:id="@+id/Namatengah"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:inputType="text"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labNamabelakang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nama_belakang"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular" />

            <EditText
                android:id="@+id/Namabelakang"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:inputType="text"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/username"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular" />

            <EditText
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:inputType="text"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/alamat"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular" />

            <EditText
                android:id="@+id/Alamat"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:inputType="text"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labNotelepon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/no_telepon"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular" />

            <EditText
                android:id="@+id/Notelepon"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:inputType="phone"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/labKatasandi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/kata_sandi"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular" />

            <EditText
                android:id="@+id/Katasandi"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/btnMasuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/masuk_u"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:letterSpacing=".1" />

            <Button
                android:id="@+id/btnDaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="55dp"
                android:layout_gravity="end"
                android:text="@string/daftar"
                android:textAllCaps="true"
                android:textColor="@color/maroon"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold"
                android:backgroundTint="@color/lazydog" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>