<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lazydog"
    tools:context=".BerandaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="95dp"
            android:layout_height="90dp"
            android:src="@drawable/corners"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="95dp"
            android:layout_height="80dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/Atas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marina"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/minionpro_bold"
                android:textColor="@color/lazydog"
                android:textAlignment="center"
                android:layout_marginTop="40dp"/>

            <TextView
                android:id="@+id/Bawah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Atas"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="-7dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/minionpro_bold"
                android:text="@string/industri"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/lazydog"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jalan"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintHorizontal_bias=".2"
            app:layout_constraintVertical_bias=".8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beranda"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/maroon"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginEnd="24sp"
            app:layout_constraintVertical_bias=".8"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:scrollbars="none"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:baselineAligned="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <SearchView
                    android:id="@+id/Search"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:iconifiedByDefault="true"
                    android:background="@drawable/search_bg"
                    android:queryHint="Cari snack .."
                    android:theme="@style/ThemeOverlay.SearchView"
                    android:layout_marginTop="25dp" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/ic_filter"
                    android:background="@drawable/search_bg"
                    android:backgroundTint="@color/gray_thin"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

            </LinearLayout>

            <ImageView
                android:id="@+id/GambarBeranda"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded"
                android:backgroundTint="@color/gray_mid"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kategori"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="111dp"
                    android:layout_height="50dp"
                    android:background=""
                    android:text="@string/makaroni"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>