<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lazydog"
    tools:context=".DetailProdukActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <ImageView
            android:id="@+id/Gambar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_rectangle"
            android:scaleType="fitXY"
            android:src="@drawable/img_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_back_button"
            app:layout_constraintBottom_toBottomOf="@+id/Gambar"
            app:layout_constraintEnd_toEndOf="@+id/Gambar"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/Gambar"
            app:layout_constraintTop_toTopOf="@+id/Gambar"
            app:layout_constraintVertical_bias="0"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/Teks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:letterSpacing=".05"
            android:text="@string/makaroni"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Gambar"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/rp_2_500"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/Teks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/Teks"
            app:layout_constraintTop_toTopOf="@+id/Teks"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/Deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/deskripsi"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:letterSpacing=".1"
            android:layout_marginTop="20dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Teks" />

        <ImageView
            android:id="@+id/Border"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/ic_border_rounded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Deskripsi"
            app:layout_constraintVertical_bias="0"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/lorem"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/Border"
            app:layout_constraintTop_toTopOf="@+id/Border"
            app:layout_constraintStart_toStartOf="@+id/Border"
            app:layout_constraintEnd_toEndOf="@+id/Border"/>

        <ImageView
            android:id="@+id/btnCart"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_cart_detail"
            android:layout_marginTop="40dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Border"
            tools:ignore="Contentdescription"/>

        <ImageView
            android:id="@+id/btnBeliSkrg"
            android:layout_width="300dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_btn_rounded"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintBottom_toBottomOf="@+id/btnCart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCart"
            app:layout_constraintTop_toTopOf="@+id/btnCart"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:letterSpacing=".04"
            android:text="@string/beli_sekarang"
            android:textAllCaps="true"
            android:textColor="@color/lazydog"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnBeliSkrg"
            app:layout_constraintTop_toTopOf="@+id/btnBeliSkrg"
            app:layout_constraintStart_toStartOf="@+id/btnBeliSkrg"
            app:layout_constraintEnd_toEndOf="@+id/btnBeliSkrg"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>